Add boilerplate HTML and begin page content

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <title>Excursion</title>
   </head>
   <body>
-
+    <h1>Discover hidden places in the world around you </h1>
+      <h3> Download Excursion (Coming soon!) </h3>
+      <h2> Your personal travel guide </h2>
+        <p> Excursion remembers places you like, and recommends new points of interest around you </p>
+      <h2> Coming Soon for iPhone and Android </h2>
+         <h3> Download Excursion (Coming soon!) </h3>
+      <p> © Excursion </p>
   </body>
 </html>
