--- a/index.html
+++ b/index.html
@@ -2,16 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="./Resources/CSS/style.css" type="text/css" rel="stylesheet">
     <title>Excursion</title>
   </head>
   <body>
     <h1>Discover hidden places in the world around you </h1>
-      <h3> Download Excursion (Coming soon!) </h3>
+      <h4>
+        <a class="cta" href="#">  Download Excursion (Coming soon!)</a>
+     </h4>
+      <p id="cellphone-video">
+        <video autoplay muted loop>
+          <source src="./Resources/videos/excursion.mp4" type="video/mp4">
+        </video>
+      </p>
       <h2> Your personal travel guide </h2>
-        <p> Excursion remembers places you like, and recommends new points of interest around you </p>
+        <p id="description"> Excursion remembers places you like, and recommends new points of interest around you</p>
+        <p id="camp">
+          <img src="./Resources/images/camp.jpg" type="image/jpg">
+        </p>
+        <p id="phone">
+          <img src="./Resources/images/phone.png" type="image/png">
+        </p>
       <h2> Coming Soon for iPhone and Android </h2>
-         <h3> Download Excursion (Coming soon!) </h3>
-      <p> © Excursion </p>
+      <h4>
+        <a class="cta" href="#">  Download Excursion (Coming soon!)</a>
+     </h4>
+      <p id="copyright"> © Excursion </p>
   </body>
 </html>
